<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_background"
    tools:context=".ui.fragments.sign_up.SignUpFragment">

    <ImageView
        android:id="@+id/sonder_sign_up_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sonder_main_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/sonder_sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sonder_sign_in_title"
        android:layout_marginTop="156dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sonder_sign_up"
        android:textColor="@color/primary_white"
        android:textAppearance="@style/MainFontStyle.Large" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sonder_sign_up"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sonder_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/sonder_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/AppTheme.PrimaryButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sonder_create_account"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="60dp"
        android:text="@string/sonder_create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/AppTheme.PrimaryButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>