<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.sign_up.SignUpWithPhoneNumber">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp">

            <TextView
                android:id="@+id/sonder_sign_up_with_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:text="@string/sonder_sign_up_with_phone_number_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/MainFontStyle.ExtraLarge.Bold"/>

            <TextView
                android:id="@+id/sonder_sign_up_with_phone_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sonder_sign_up_with_phone_number_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sonder_sign_up_with_phone_title"
                android:textAppearance="@style/MainFontStyle.Medium"/>

            <EditText
                android:id="@+id/sonder_enter_phone_number"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sonder_sign_up_with_phone_subtitle"
                android:layout_marginTop="32dp"
                android:inputType="phone"
                android:digits="0123456789+"
                android:gravity="start|center_vertical"
                android:paddingHorizontal="16dp"
                android:hint="@string/sonder_sign_up_with_phone_number_enter_your_phone_number"
                android:autofillHints="phone"
                android:textCursorDrawable="@drawable/sonder_cursor_color"
                android:textColor="@color/primary_black"
                style="@style/AppTheme.SecondaryButton"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sonder_enter_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sonder_sign_up_continue_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/sonder_continue"
                style="@style/AppTheme.PrimaryButton"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:progressTint="@color/primary_red"
                android:layout_gravity="center"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/primary_red"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
